# python-pbr-test

./: .gitignore  AUTHORS  ChangeLog  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
pip/: _complete_upgrade_flow.bat  compile_pkg.bat  install_upgrade_pkg.bat  push_pkg.bat
src/david/some/: thing.py
