[metadata]
name = david
license=MIT
requires-python = >=3.6
description-file =
	README.rst 
home-page = https://github.com/Davis8988/python-pbr-test.git
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Global Functions
    License :: OSI Approved :: MIT Software License
    Operating System :: OS Independent
    Programming Lauguage :: python
	
[files]
packages =
    david