[metadata]
name = david
author = David Yair
# author = David Yair, Someone, Else
author_email = john.doe@example.com
# author_email = john.doe@example.com, someone@mail.com
license=MIT
requires-python = >=3.6
description-file =
	README.rst 
url = https://github.com/Davis8988/python-pbr-test.git
project_urls =
    Source Code = https://github.com/Davis8988/python-pbr-test.git
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Global Functions
    License :: OSI Approved :: MIT Software License
    Operating System :: OS Independent
    Programming Lauguage :: python
keywords =
    global
    functions


[global]
setup-hooks =
    pbr.hooks.setup_hook


[wheel]
	universal = 1

[sdist]
	formats = zip, gztar

[pbr]
skip_authors = True
skip_changelog = False


[options]
package_dir =
    =src
	
[options.packages.find]
where = src
exclude =
    tests 